[package]
name = "tls-fragment-proxy"
version = "1.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
dashmap = "6.1.0"
humansize = "2.1"
parking_lot = "0.12"
rand = "0.9.2"
thiserror = "2.0.16"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
socket2 = "0.6.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"