[package]
name = "tls-fragment-proxy"
version = "1.0.4"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5.47", features = ["derive"] }
dashmap = "6.1.0"
humansize = "2.1"
parking_lot = "0.12"
socket2 = "0.6.0"
thiserror = "2.0.16"
tokio = { version = "1.41", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1.7.0"
lru = "0.16.1"
aho-corasick = "1.1.3"
rayon = "1.11.0"
serde = { version = "1.0.226", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
memmap2 = "0.9.8"
bloomfilter = "3.0.1"
httparse = "1.8.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true