[package]
name = "tls-fragment-proxy"
version = "1.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5.47", features = ["derive"] }
humansize = "2.1"
parking_lot = "0.12"
socket2 = "0.6.0"
thiserror = "2.0.16"
tokio = { version = "1.47", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1.10.0"
aho-corasick = "1.1.3"
rayon = "1.11.0"
serde = { version = "1.0.226", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
bloomfilter = "3.0.1"
httparse = "1.10.1"
trust-dns-resolver = { version = "0.23.2", features = ["dns-over-https-rustls"] }
moka = { version = "0.12.11", features = ["sync"] }


[profile.min]
inherits = "release"
opt-level = 'z'
lto = "fat"
codegen-units = 1
panic = 'abort'
strip = true